--- a/Enhanced/home.html
+++ b/Enhanced/home.html
@@ -22,6 +22,7 @@
         <a href="order.html">order</a>
         <a href="review.html">review</a>
         <a href="about.html">about us</a>
+        <a href="register.php">my account</a>
     </nav>
 
 </header>
