--- a/Enhanced/home.html
+++ b/Enhanced/home.html
@@ -20,7 +20,7 @@
         <a href="home.html">home</a>
         <a href="menu.html">menu</a>
         <a href="order.html">order</a>
-        <a href="review.html">review</a>
+        <a href="review.php">review</a>
         <a href="about.html">about us</a>
         <a href="login.php">my account</a>
     </nav>
