updated order.php, session for all and logout
order.php is now order summary, session to pass email to check they are logged in.

--- a/Enhanced/header.html
+++ b/Enhanced/header.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<a href="home.php" class="logo">
+    <img src="images/logo.png">
+</a>
 <nav class="navbar">
     <a href="home.php">home</a>
     <a href="menu.php">menu</a>
@@ -7,8 +10,7 @@
     <a href="review.php">review</a>
     <a href="about.php">about us</a>
     <a href="login.php">my account</a>
+	<a href="logout.php">log out</a>
 </nav>
- 
-
 
 </html>
